--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +44,7 @@
   },
   "devDependencies": {
     "@types/web-bluetooth": "^0.0.16",
+    "react-scripts": "^3.0.1",
     "gh-pages": "^5.0.0"
   }
 }
